Add Confusion matrix's plot where the threshold is 0.4

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -1393,7 +1393,12 @@
    "id": "fef848b2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "ConfusionMatrixDisplay.from_predictions(y_test, y_pred_04)\n",
+    "plt.title(\"Confusion Matrix - Logistic Regression(threshold=0.4)\")\n",
+    "plt.show"
+   ]
   }
  ],
  "metadata": {
